# AI-EnabledCoding

./: .env  Dockerfile  README.md  codebase_pipeline.py  home.py  main.py  pipeline.py  pyproject.toml
Validation/: compilation_stage.py  validation_pipeline.py
Validation_Test_Code/: calculate_area.c
output/path/to/: file.ext
