[project]
name = "codemodernizer"
version = "0.1.0"
description = "A Streamlit app pondering chicken dreams"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "openai",
    "dotenv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]